Jumpy bubble issues & hopefully ios blinking issue

--- a/component/styles/reply.css
+++ b/component/styles/reply.css
@@ -7,7 +7,7 @@
 	transform-origin: right top;
   margin: 8px 0 10px;
 	padding: 0;
-	max-width: 100%;
+	max-width: 65%;
 }
 .bubble.reply.say {
 /* 
@@ -15,7 +15,7 @@
  */
 }
 .bubble.reply .bubble-content {
-	transition: all 300ms;
+	transition: all 200ms;
 }
 .bubble.reply .bubble-content .bubble-button {
 	background: rgba(44, 44, 44, 0.67);
@@ -28,6 +28,7 @@
 	cursor: pointer;
 	transition: all 200ms;
 	text-decoration: none;
+	word-break: normal;
 	animation-duration: 1s;
 	animation-name: animate-reply;
 	animation-play-state: paused;
@@ -41,7 +42,7 @@
 .bubble.reply.say .bubble-content .bubble-button {
 	animation-play-state: running;
 	margin-top: 3px;
-	height: 24px;
+	min-height: 24px;
 	overflow: hidden;
 }
 
@@ -62,6 +63,7 @@
 	background: rgba(44, 44, 44, 1);
 	transform: scale(1);
   padding: 8px 16px;
+  height: auto;
 }
 
 /* input fields for bubbles */
